--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,8 @@ stripe==7.9.0
 typing_extensions==4.9.0
 tzdata==2023.3
 uritemplate==4.1.1
-urllib3==1.26.18moviepy==1.0.3
+urllib3==1.26.18
+moviepy==1.0.3
 twilio
 requests
 sendgrid
